--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vite-plugin-fetchx",
   "version": "0.1.0",
-  "type": "module",
   "main": "dist/index.js",
   "types": "dist/types.d.ts",
   "scripts": {
@@ -16,7 +15,11 @@
   ],
   "author": "Franco",
   "license": "MIT",
+  "peerDependencies": {
+    "vite": "^7.2.2"
+  },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.2"
   }
