chore: solutions with vite versions

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "interceptor",
     "typescript"
   ],
-  "author": "Franco",
+  "author": "Franco Andrés Sánchez",
   "license": "MIT",
   "peerDependencies": {
-    "vite": "^7.2.2"
+    "vite": ">=4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2"
+    "vite": "7.1.0"
   }
 }
